--- a/app/src/main/res/layout/activity_historico.xml
+++ b/app/src/main/res/layout/activity_historico.xml
@@ -22,6 +22,18 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/asdaf" />
 
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="CENTRO DE VALORIZAÇÃO DA VIDA - LIGUE 188"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/idBottomNavHistorico"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageButton
         android:id="@+id/idImgBtnVoltarHistorico"
         android:layout_width="130dp"
@@ -49,8 +61,8 @@
         android:id="@+id/idListViewHistorico"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/idBottomNavHistorico"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/idImgBtnVoltarHistorico" />
