--- a/app/src/main/res/layout/activity_objetivo.xml
+++ b/app/src/main/res/layout/activity_objetivo.xml
@@ -13,21 +13,34 @@
         android:layout_height="730dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/objetivo_atual" />
 
-    <Button
-        android:id="@+id/idBtnIniciar"
-        android:layout_width="240dp"
-        android:layout_height="32dp"
-        android:text="Início"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+    <ImageButton
+        android:id="@+id/idImgBtnVoltarObjetivo"
+        android:layout_width="130dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/fab_transformation_sheet_behavior"
+        android:scaleType="fitStart"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.977" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/img_voltar" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="CENTRO DE VALORIZAÇÃO DA VIDA - LIGUE 188"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
