--- a/app/src/main/res/layout/activity_tela_exercicios.xml
+++ b/app/src/main/res/layout/activity_tela_exercicios.xml
@@ -21,6 +21,18 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/asdaf" />
 
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="CENTRO DE VALORIZAÇÃO DA VIDA - LIGUE 188"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/idBottomNavExercicios"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageButton
         android:id="@+id/idImgBtnVoltarExercicio"
         android:layout_width="130dp"
