--- a/app/src/main/res/layout/activity_tela_inicio.xml
+++ b/app/src/main/res/layout/activity_tela_inicio.xml
@@ -151,4 +151,14 @@
         app:layout_constraintStart_toStartOf="@+id/idBtnSalvarSentimento"
         app:layout_constraintTop_toBottomOf="@+id/idBtnSalvarSentimento" />
 
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clique no emoji para alterar seu sentimento"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/idBtnImgSentimento"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
